--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,35 +7,37 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
-
+  build-and-deploy:
     runs-on: self-hosted  # Ensure self-hosted runner is configured
 
     strategy:
       matrix:
-        node-version: [22.x]  # Change to LTS version of Node.js (recommend Node 20.x)
+        node-version: [22.x]  # Use LTS version of Node.js
 
     steps:
-    - uses: actions/checkout@v4  # Checkout the code from the repository
-    
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'  # Cache npm dependencies
+      - name: Checkout Code
+        uses: actions/checkout@v4  # Checkout the repository
 
-    - name: Install Dependencies
-      run: npm ci  # Clean install dependencies
+      - name: Set Up Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'  # Cache npm dependencies for faster builds
 
-    - name: Build the Project (Optional)
-      run: npm run build --if-present  # Build if there's a build script
-    
-    - name: Install Serverless Framework
-      run: npm install -g serverless  # Install Serverless globally
+      - name: Install Dependencies
+        run: npm ci  # Clean install dependencies
 
-    - name: Deploy with Serverless
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        serverless deploy --stage production  # Deploy using the serverless framework
+      - name: Build the Project (Optional)
+        run: npm run build --if-present  # Build only if a build script exists
+
+      - name: Install Serverless Framework
+        run: npm install -g serverless@4  # Install latest Serverless framework
+
+      - name: Deploy with Serverless
+        env:
+          SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}  # Serverless auth key
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          serverless deploy --stage production  # Deploy using serverless framework
+          
